syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Course {
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
}

message CreateCourseRequest {
  string name = 1;
  string description = 2;
  string category_id = 3;
}

service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (Course) {}
}